--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,23 @@
+<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Docker Kali Manager</title>
+  <title>Mon Docker & Kali Manager</title>
+  <!-- Bootstrap 5.x -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <div class="container">
-      <a class="navbar-brand" href="{{ url_for('home_bp.index') }}">Docker Kali Manager</a>
-    </div>
-  </nav>
-
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container">
-    {% block content %}{% endblock %}
+    <a class="navbar-brand" href="{{ url_for('home_bp.index') }}">Docker Kali Manager</a>
   </div>
+</nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container mt-4">
+  {% block content %}{% endblock %}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
